--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,34 @@
                     <target>1.6</target>
                 </configuration>
             </plugin>
+<plugin>
+<groupId>org.jacoco</groupId>
+<artifactId>jacoco-maven-plugin</artifactId>
+<version>0.6.3.201306030806</version>
+<executions>
+<execution>
+<id>prepare-agent</id>
+<phase>test-compile</phase>
+<goals>
+<goal>prepare-agent</goal>
+</goals>
+<configuration>
+<propertyName>jacocoArgs</propertyName>
+<includes>
+<include>${jacoco.include.package}</include>
+</includes>
+</configuration>
+</execution>
+<execution>
+<id>report</id>
+<phase>prepare-package</phase>
+<goals>
+<goal>report</goal>
+</goals>
+</execution>
+</executions>
+</plugin>
+            <!-- Junit(test) -->
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.10</version>
@@ -49,6 +77,7 @@
                             <goal>test</goal>
                         </goals>
                         <configuration>
+<argLine>${jacocoArgs}</argLine>
                             <skip>false</skip>
                             <includes>
                                 <include>**/When*.java</include>
@@ -74,6 +103,7 @@
                     </execution>
                 </executions>
             </plugin>
+            
             <!-- CODE COVERAGE -->
             <plugin>
                 <groupId>org.jacoco</groupId>
@@ -174,6 +204,9 @@
             </extension>
         </extensions>
     </build>
+    
+    
+    
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -267,6 +300,8 @@
                 </plugins>
             </build>
         </profile>
+        
+        <!-- ------------------------------------------>
         <profile>
             <id>maven3</id>
             <activation>
@@ -316,6 +351,8 @@
                                         <argLine>-XX:-UseSplitVerifier</argLine>                                        
                                     </configuration>
                                 </plugin>
+                                
+                                <!-- CheckStyle -->
                                 <plugin>
                                     <groupId>org.apache.maven.plugins</groupId>
                                     <artifactId>maven-checkstyle-plugin</artifactId>
@@ -324,6 +361,7 @@
                                     <!--<configLocation>gol-checkstyle.xml</configLocation>-->
                                     <!--</configuration>-->
                                 </plugin>
+                                
                                 <plugin>
                                     <groupId>org.apache.maven.plugins</groupId>
                                     <artifactId>maven-pmd-plugin</artifactId>
@@ -387,6 +425,7 @@
                 </plugins>
             </build>
         </profile>
+        
         <profile>
             <id>maven2</id>
             <build>
@@ -455,6 +494,7 @@
 
                         </configuration>
                     </plugin>
+                    <!-- for maven2
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-checkstyle-plugin</artifactId>
@@ -463,6 +503,7 @@
                             <configLocation>gameoflife-build/checkstyle.xml</configLocation>
                         </configuration>
                     </plugin>
+                    -->
                     <plugin>
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>findbugs-maven-plugin</artifactId>
