--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,9 @@
         <thucydides.version>0.9.222</thucydides.version>
         <jelastic.context>gameoflife</jelastic.context>
         <jelastic.environment>wakaleo</jelastic.environment>
+        
+        <jacoco.include.package>*.gameoflife.*</jacoco.include.package>
+
     </properties>
 
     <scm>
@@ -38,7 +41,6 @@
 <plugin>
 <groupId>org.jacoco</groupId>
 <artifactId>jacoco-maven-plugin</artifactId>
-<version>0.6.3.201306030806</version>
 <executions>
 <execution>
 <id>prepare-agent</id>
@@ -68,6 +70,7 @@
                 <version>2.10</version>
                 <configuration>
                     <skip>true</skip>
+<argLine>${jacocoArgs}</argLine>
                 </configuration>
                 <executions>
                     <execution>
@@ -99,6 +102,7 @@
                             <includes>
                                 <include>%regex[.*integration.*]</include>
                             </includes>
+<argLine>${jacocoArgs}</argLine>
                         </configuration>
                     </execution>
                 </executions>
@@ -464,6 +468,17 @@
                 </plugins>
             </build>
             <reporting>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-report-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
+      </plugin>
+    </plugins>
+
                 <plugins>
                     <plugin>
                         <groupId>org.codehaus.mojo</groupId>
